Feature flag admin endpoints (#1474)
* WIP: Feature flag admin endpoints

* update feature flag service tests

* review changes

* merge dev into feature/feature-flag-admin-api

* review changes

---------

Co-authored-by: danoswaltCL <97542869+danoswaltCL@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/dashboard-root/dashboard-root.component.scss
@@ -53,7 +53,8 @@ mat-drawer {
           border-radius: 7px;
           background-color: var(--blue);
 
-          .icon, .list-item-label {
+          .icon,
+          .list-item-label {
             color: var(--white);
           }
         }
