--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.scss
@@ -8,7 +8,8 @@
     display: flex;
     column-gap: 8px;
 
-    .root-link, .details-name {
+    .root-link,
+    .details-name {
       color: var(--light-black);
     }
   }
