--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -1,10 +1,7 @@
 <mat-card appearance="raised" class="experiments-list-container">
   <div class="header">
     <div>
-      <mat-form-field
-        class="dense-2 filter-options"
-        subscriptSizing="dynamic"
-      >
+      <mat-form-field class="dense-2 filter-options" subscriptSizing="dynamic">
         <mat-select
           class="ft-14-400"
           [(ngModel)]="selectedExperimentFilterOption"
@@ -15,10 +12,7 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field
-        class="dense-2"
-        subscriptSizing="dynamic"
-      >
+      <mat-form-field class="dense-2" subscriptSizing="dynamic">
         <div *ngIf="selectedExperimentFilterOption !== 'status'">
           <input
             class="ft-14-400 search-input"
