--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
@@ -15,11 +15,7 @@
             {{ 'home.new-experiment.schedule.end-on.text' | translate }}
           </span>
         </mat-radio-button>
-        <mat-form-field
-          class="dense-2"
-          appearance="outline"
-          subscriptSizing="dynamic"
-        >
+        <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
           <input
             class="ft-14-400 input"
             matInput
@@ -41,11 +37,7 @@
           </span>
         </mat-radio-button>
         <div class="end-criteria" *ngIf="experiment.group">
-          <mat-form-field
-            class="dense-2 group-type-control"
-            appearance="outline"
-            subscriptSizing="dynamic"
-          >
+          <mat-form-field class="dense-2 group-type-control" appearance="outline" subscriptSizing="dynamic">
             <input
               class="ft-14-400 input"
               type="number"
@@ -69,11 +61,7 @@
           ></span>
         </div>
         <div class="end-criteria">
-          <mat-form-field
-            class="dense-2"
-            appearance="outline"
-            subscriptSizing="dynamic"
-          >
+          <mat-form-field class="dense-2" appearance="outline" subscriptSizing="dynamic">
             <input
               class="ft-14-400 input"
               type="number"
