--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-page/common-page.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-page/common-page.component.html
@@ -3,6 +3,6 @@
     <ng-content select="[header]"></ng-content>
   </header>
   <section class="content">
-    <ng-content select="[section-card]"></ng-content>
+    <ng-content select="[content]"></ng-content>
   </section>
 </div>
