--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
@@ -28,9 +28,12 @@
     }
   }
 
-  .content { //placeholder remove me when i have content
-    margin: 30px;
-    background-color: beige;
+  .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 200px;
   }
 
   .footer {
