Feature/add root table (#1568)
* feature flag root table section basic setup

* add constants

---------

Co-authored-by: Zack Lee <zlee@carnegielearning.com>

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
@@ -15,7 +15,11 @@
   }
 
   .content {
-    padding: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 200px;
   }
 
   .footer {
