add feature flag details link in table rows and to the details bread crumb

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -9,7 +9,13 @@
           </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let flag">
-          <span>{{ flag.name }}</span>
+          <a
+            [routerLink]="['/featureflags', 'detail', flag.id]"
+            *ngIf="flag.name?.length < 30; else flagNameEllipsis"
+            class="flag-name"
+          >
+            {{ flag.name }}
+          </a>
           <ng-template #flagNameEllipsis>
             <span
               [matTooltip]="flag.name"
