--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.scss
@@ -5,12 +5,12 @@
   padding: 0;
   height: 100%;
 
-  .example-tree-invisible {
+  .mat-nested-tree-invisible {
     display: none;
   }
 
-  .example-tree ul,
-  .example-tree li {
+  .mat-nested-tree ul,
+  .mat-nested-tree li {
     margin-top: 0;
     margin-bottom: 0;
     list-style-type: none;
@@ -28,14 +28,14 @@
     margin-right: 12px; /* Space between square and button */
     background-color: black; /* Color of the square */
   }
-  .example-tree .mat-nested-tree-node div[role='group'] {
+  .mat-nested-tree .mat-nested-tree-node div[role='group'] {
     padding-left: 40px;
   }
-  .example-tree div[role='group'] > .mat-tree-node {
+  .mat-nested-tree div[role='group'] > .mat-tree-node {
     padding-left: 40px;
   }
 
-  .example-tree-invisible {
+  .mat-nested-tree-invisible {
     display: none;
   }
 
