--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.html
@@ -1,3 +1,3 @@
 <mat-chip class="status-indicator" [ngClass]="chipClass">
-  {{ convertKebabToTitleCase(chipClass) }}
+  {{ chipText }}
 </mat-chip>
