added color to table header

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.scss
@@ -36,8 +36,9 @@
       word-break: break-word;
     }
 
-    .flag-table-header-row {
-      background-color: var(--zircon);;
+    .mat-mdc-header-cell {
+      background-color: var(--zircon);
+      margin-bottom: 10px;
     }
 
     .flag {
