--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
@@ -10,13 +10,13 @@
         <mat-form-field appearance="outline">
           <mat-label>Name</mat-label>
           <input matInput formControlName="name" placeholder="e.g., My feature flag" required/>
-          <mat-hint class="ft-10-400">The name for this feature flag.</mat-hint>
+          <mat-hint class="form-hint ft-10-400">The name for this feature flag.</mat-hint>
         </mat-form-field>
       
         <mat-form-field appearance="outline">
           <mat-label>Key</mat-label>
           <input matInput formControlName="key" placeholder="Key for this feature flag" required/>
-          <mat-hint class="ft-10-400">A unique key used to retrieve this feature flag from the client application. <a href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
+          <mat-hint class="form-hint ft-10-400">A unique key used to retrieve this feature flag from the client application. <a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
         </mat-form-field>
       
         <mat-form-field appearance="outline">
@@ -29,7 +29,7 @@
           <mat-select formControlName="appContext" required>  
             <mat-option *ngFor="let context of appContexts" [value]="context">{{ context }}</mat-option>
           </mat-select>
-          <mat-hint class="ft-10-400">The App Context indicates where the experiment will run, known to UpGrade. <a href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
+          <mat-hint class="form-hint ft-10-400">The App Context indicates where the experiment will run, known to UpGrade. <a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
         </mat-form-field>
       
         <mat-form-field appearance="outline">
