--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.scss
@@ -1,7 +1,7 @@
-:host ::ng-deep {
+:host ::ng-deep .modal-container {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: space-between;
   width: 100%;
   height: 600px;
 }
@@ -19,11 +19,11 @@
   margin-bottom: 15px;
 }
 
-.mat-hint {
-  color: lightgray;
+.form-hint {
+  color: var(--grey-5);
 }
 
-a {
+.learn-more-link {
   color: var(--blue);
   text-decoration: none;
 
