--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-modal/common-modal.component.scss
@@ -1,7 +1,7 @@
 .common-modal {
   background-color: #fff;
   width: auto;
-  min-height: 200px;
+  min-height: auto;
   display: flex;
 
   .header-container {
@@ -19,6 +19,8 @@
       font-weight: bold;
       font-family: 'Open Sans';
       flex-basis: 80%;
+      padding: 0;
+      margin: 0;
     }
 
     .close-button {
