tabbed footer and details page scaffolding

--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-list/common-section-card-list.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-list/common-section-card-list.component.scss
@@ -3,8 +3,9 @@
   flex-direction: column;
   width: 100%;
   margin: 0;
-}
 
-.section-card {
-  margin-bottom: 20px;
+  // all direct children (section cards)
+  > * {
+    margin-bottom: 30px;
+  }
 }
