--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card/common-section-card.component.scss
@@ -20,9 +20,11 @@
     align-items: center;
     width: 100%;
     min-height: 10px;
+    padding: 0 32px;
   }
 
   .footer {
+    border-top: 1px solid var(--light-grey);
     padding: 0 32px;
   }
 }
