--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.scss
@@ -5,11 +5,25 @@
   justify-content: center;
 
   .title {
+    display: flex;
+    align-items: center;
     margin-bottom: 0;
+  }
+
+  .status-chip {
+    margin-left: 1rem;
+    vertical-align: middle;
   }
 
   .subtitle {
     margin-bottom: 0;
     color: var(--grey-3);
+  }
+
+  .view-logs-link {
+    margin-left: 0.5rem;
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
   }
 }
