--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-status-indicator-chip/common-status-indicator-chip.component.scss
@@ -3,6 +3,10 @@
   --mdc-chip-elevated-container-color: transparent;
 }
 
+.status-indicator {
+  margin-bottom: 5px;
+}
+
 ::ng-deep .status-indicator.global {
   --mdc-chip-label-text-color: blue;
   border: 1px solid blue;
