--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/add-feature-flag-modal/add-feature-flag-modal.component.html
@@ -11,13 +11,13 @@
         <mat-form-field appearance="outline">
           <mat-label>Name</mat-label>
           <input matInput formControlName="name" placeholder="e.g., My feature flag"/>
-          <mat-hint class="form-hint ft-10-400">The name for this feature flag.</mat-hint>
+          <mat-hint class="form-hint ft-10-400">{{ "feature-flags.add-flag-modal.name-hint.text" | translate }}</mat-hint>
         </mat-form-field>
       
         <mat-form-field appearance="outline">
           <mat-label>Key</mat-label>
           <input matInput formControlName="key" placeholder="Key for this feature flag"/>
-          <mat-hint class="form-hint ft-10-400">A unique key used to retrieve this feature flag from the client application. <a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
+          <mat-hint class="form-hint ft-10-400">{{ "feature-flags.add-flag-modal.key-hint.text" | translate }}<a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
         </mat-form-field>
       
         <mat-form-field appearance="outline">
@@ -27,10 +27,10 @@
       
         <mat-form-field appearance="outline">
           <mat-label>App Context</mat-label>
-          <mat-select formControlName="appContext">  
+          <mat-select formControlName="appContext">
             <mat-option *ngFor="let context of appContexts$ | async" [value]="context">{{ context }}</mat-option>
           </mat-select>
-          <mat-hint class="form-hint ft-10-400">The App Context indicates where the experiment will run, known to UpGrade. <a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
+          <mat-hint class="form-hint ft-10-400">{{ "feature-flags.add-flag-modal.app-context-hint.text" | translate }}<a class="learn-more-link" href="https://www.upgradeplatform.org/">Learn more</a></mat-hint>
         </mat-form-field>
       
         <!-- TODO: create a story to create a tag input common component, don't want to copy over the logic of the mat-tag-grid from experiment-overview here -->
