--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card.component.html
@@ -3,8 +3,8 @@
   <app-common-section-card-search-header
     header-left
     [filterOptions]="featureFlagFilterOption"
-    [initialFilterOption]="selectedFeatureFlagFilterOption"
-    [initialSearchValue]="searchValue"
+    [searchKey]="searchKey$ | async"
+    [searchString]="searchString$ | async"
     (search)="onSearch($event)"
   ></app-common-section-card-search-header>
 
@@ -29,7 +29,7 @@
     <ng-template #table>
       <app-feature-flag-root-section-card-table 
         class="full-width"
-        [dataSource$]="allFeatureFlags"
+        [dataSource$]="dataSource$ | async"
         [isLoading$]="isLoadingFeatureFlags$"
       ></app-feature-flag-root-section-card-table>
     </ng-template>
