--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-search-header/common-section-card-search-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-search-header/common-section-card-search-header.component.html
@@ -1,6 +1,6 @@
 <div class="search-header">
   <mat-form-field class="dense-2 filter-options" subscriptSizing="dynamic">
-    <mat-select class="ft-14-400" [(ngModel)]="selectedFilterOption" (selectionChange)="onSearch()">
+    <mat-select class="ft-14-400" [(ngModel)]="searchKey" (selectionChange)="onSearch()">
       <mat-option class="ft-14-400" *ngFor="let filterOption of filterOptions" [value]="filterOption">
         {{ filterOption | titlecase }}
       </mat-option>
@@ -11,7 +11,7 @@
       class="ft-14-400 search-input"
       matInput
       #searchInput
-      [(ngModel)]="searchValue"
+      [(ngModel)]="searchString"
       (keyup)="onSearch()"
       [placeholder]="'global.search.text' | translate"
     />
