addressed the review cmts

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -2,7 +2,8 @@
   <!-- header-left -->
   <app-common-section-card-title-header
     [title]="flagName"
-    [subtitle]="flagHeaderSubtitle"
+    [createdAt]="flagCreatedAt"
+    [updatedAt]="flagUpdatedAt"
     [showViewLogs]="true"
     [chipClass]="flagStatus"
     (viewLogs)="viewLogsClicked($event)"
