--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.html
@@ -6,7 +6,19 @@
     </ng-container>
   </h1>
   <h3 class="subtitle ft-16-400">
-    {{ subtitle | translate }}
+    <ng-container *ngIf="subtitle">
+      {{ subtitle | translate }}
+    </ng-container>
+    <ng-container *ngIf="createdAt && updatedAt">
+      <span class="ft-16-600 segment-create-date">
+        {{ ('home.view-experiment.created-on.text' | translate) + (createdAt | formatDate: 'medium date') + ' | '}}
+      </span>
+      <span class="ft-16-600 segment-update-date">
+        {{
+          ('home.view-experiment.last-updated-on.text' | translate) + (updatedAt | formatDate: 'short date')
+        }}
+      </span>
+    </ng-container>
     <ng-container *ngIf="showViewLogs">
       <a [href]="" class="view-logs-link" (click)="viewLogsClicked()"> View logs</a>
     </ng-container>
