--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-action-buttons/common-section-card-action-buttons.component.scss
@@ -7,6 +7,7 @@
     padding: 0 16px;
 
     ::ng-deep .mat-mdc-slide-toggle .mdc-label {
+      margin-left: 5px;
       color: var(--dark-grey);
     }
 
