--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
@@ -53,8 +53,8 @@
             <mat-tree [dataSource]="[element]" [treeControl]="nestedTreeControl" class="mat-nested-tree">
               <!-- This is the tree node template for leaf nodes -->
               <mat-tree-node *matTreeNodeDef="let node; let index = index">
-                <button mat-icon-button disabled class="button-container">
-                  <!-- <mat-icon class="mat-icon-rtl-mirror"> chevron_right </mat-icon> -->
+                <button mat-icon-button>
+                  <mat-icon class="leaf-node-button-icon"> fiber_manual_record</mat-icon>
                 </button>
                 {{ node.key }}
                 <mat-icon *ngIf="permissions.metrics.delete && keyEditMode" class="icon" (click)="deleteNode(node)">
@@ -65,7 +65,7 @@
               <mat-nested-tree-node *matTreeNodeDef="let node; when: hasNestedChild">
                 <div class="mat-tree-node">
                   <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.key">
-                    <mat-icon class="mat-icon-rtl-mirror">
+                    <mat-icon>
                       {{ nestedTreeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
                     </mat-icon>
                   </button>
@@ -88,8 +88,8 @@
             {{ 'query.table-context.text' | translate }}
           </th>
           <td class="ft-12-600" mat-cell *matCellDef="let element">
-            <mat-chip-row *ngFor="let contextTag of element.context">
-              <span class="ft-12-600 chip-label">
+            <mat-chip-row *ngFor="let contextTag of element.context" class="context-chip">
+              <span>
                 {{ contextTag }}
               </span>
             </mat-chip-row>
