--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/add-metrics/add-metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/add-metrics/add-metrics.component.html
@@ -2,8 +2,8 @@
   <span class="ft-24-700 title">{{ 'metric.add-metrics.text' | translate | titlecase }}</span>
   <div class="filter-container">
     <mat-form-field class="dense-2 filter-options" subscriptSizing="dynamic">
-      <mat-select class="ft-14-400" placeholder="App Context">
-        <mat-option class="ft-14-400" *ngFor="let context of contextOptions" [value]="context">
+      <mat-select class="ft-14-400" placeholder="App Context" [(ngModel)]="selectedContextOption">
+        <mat-option class="ft-14-400" *ngFor="let context of allContexts" [value]="context">
           {{ context }}
         </mat-option>
       </mat-select>
