--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-exclusions-section-card/feature-flag-exclusions-section-card.component.html
@@ -1,5 +1,10 @@
 <app-common-section-card>
-  <div header-left style="background-color: lightskyblue; height: 90px; width: 100%">header-left</div>
+  <app-common-section-card-title-header
+  header-left
+  [title]="'feature-flags.details.exclusions.card.title.text' | translate"
+  [subtitle]="'feature-flags.details.exclusions.card.subtitle.text' | translate"
+  [tableRowCount]="tableRowCount$ | async"
+></app-common-section-card-title-header>
   <div header-right style="background-color: lightskyblue; height: 90px; width: 100%">header-right</div>
   <div content style="background-color: lightskyblue; height: 90px; width: 100%">content: Exclusions</div>
 </app-common-section-card>
